# lorax

./: .gitattributes  .gitignore  .gitmodules  .stow-local-ignore  README.md  environment.yml  pca.py  pyproject.toml  requirements.txt
.githook/: pre-commit
.github/: CONTRIBUTING.md
latex/: sources.bib
paper/: NOTES.md
script/: annotate_data  eval.py  lorax  pca.py  test.py  train.py
src/lorax/: __init__.py  __main__.py  data.py  model.py  prodes_masking.py
src/lorax/data/: PRODESDataset.py  __init__.py  util.py
src/lorax/model/: SegmentingVisionTransformer.py  __init__.py
